[gd_scene load_steps=4 format=3 uid="uid://2pf2a0s6rm3r"]

[ext_resource type="Theme" uid="uid://durh0keniwv21" path="res://gui/theme.tres" id="1_2h8ok"]
[ext_resource type="Script" uid="uid://duit1iwitndwt" path="res://gui/left_panel.gd" id="1_4jjva"]
[ext_resource type="PackedScene" uid="uid://dmnc8o7p4qybn" path="res://gui/objectives/distance_objective.tscn" id="2_jojih"]

[node name="LeftPanel" type="Panel"]
custom_minimum_size = Vector2(272, 0)
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
theme = ExtResource("1_2h8ok")
script = ExtResource("1_4jjva")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(272, 0)
layout_mode = 2

[node name="VBoxContainer" type="HFlowContainer" parent="ScrollContainer/CenterContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Padding" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="DistanceLabel" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
text = "Distance:"

[node name="TimeLabel" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
text = "Time:"

[node name="SpeedLabel" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
text = "Speed:"

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ObjectivesHeader" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
text = "Objectives"
horizontal_alignment = 1

[node name="ObjectiveLabel" parent="ScrollContainer/CenterContainer/VBoxContainer" instance=ExtResource("2_jojih")]
layout_mode = 2
target_distance = 10.0

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Header2" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
text = "Previous Runs"
horizontal_alignment = 1

[node name="TableHeader" type="HBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Table Header"

[node name="Label" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer/TableHeader"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
text = "#"
horizontal_alignment = 3

[node name="Label4" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer/TableHeader"]
layout_mode = 2
size_flags_horizontal = 3
text = "Distance"
horizontal_alignment = 2

[node name="Label2" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer/TableHeader"]
layout_mode = 2
size_flags_horizontal = 3
text = "Speed"
horizontal_alignment = 2
